[package]
name = "mvc"
version = "1.0.1"
edition = "2024"
repository = "https://github.com/Mivio-Linux/mivio-version-control"
license = "MIT"
readme = "README.md"
description = "MVC is a utility written in Rust that provides a snapshot system that allows you to roll back code."
[dependencies]
serde = {version = "1.0.228", features=["derive"]}
serde_json = "1.0.149"
tar = "0.4.44"
sha2 = "0.10"
walkdir = "2.5.0"
colored = "3.1.1"
[profile.release]
opt-level = "s"
panic = "abort"
debug = 0